updates to timer panel